test/sema/const-is-transitive.delta.output
const-is-transitive.delta:9:11: error: cannot assign to immutable variable 'a' of type 'int'
    foo.a = 42
          ^
const-is-transitive.delta:7:6: warning: unused declaration 'bar'
void bar(const Foo* foo) {
     ^
